Ash: Inline InitKeyboard, and make the caller of it call CreateKeyboard.

InitKeyboard creates a keyboard controller but doesn't associate it with any
root window controller. It's potentially problematic if
keyboard::ShowKeyboard is called before RootWindowController::ActivateKeyboard.

Bug: 712873

Change-Id: I5b34cd6f8b9e1b0736b5d91880e3aedc9d57970c